comment box added

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@
   {% include head.html %}
   <body>
     <div id="wrap">
+
+    {% include facebook-init.html %}
     {% include navbar.html %}
+
 
     <div class="container-fluid main-data">
       <div class="col-md-3"></div>
@@ -17,6 +20,7 @@
       <div class="col-md-3"></div>
     </div>
     </div>
+    {% include facebookcomment.html %}
     {% include footer.html %}
   </body>
 </html>
