--- a/_includes/facebookcomment.html
+++ b/_includes/facebookcomment.html
@@ -7,4 +7,4 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-comments" data-href="{{ site.url }}{{ page.url }}" data-numposts="5"></div>
+<div class="fb-comments" data-href="{{ site.url }}{{ page.url }}" data-numposts="5" width="auto"></div>
