share button added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,8 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
+  <!--google share button -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
