--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
   <div class="col-md-3"></div>
   <div class="col-md-6 text-center">
     <h4>Created with <i class="fa fa-heart" aria-hidden="true"></i> in Jekyll</h4>
+    <h5>Visit my website <a href="http://rabingaire.com.np">rabingaire.com.np</a></h5>
   </div>
   <div class="col-md-3"></div>
 </div>
