--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,22 +15,8 @@
           <h5 class="post-time text-center">{{ page.date | date: "%B %-d, %Y" }}</h5>
         </div>
         {{ content }}
-        <div class="share-social">
-          <span class="twitter">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
-            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-          </span>
 
-          <span class="share-google">
-            <div class="g-plus" data-action="share" data-annotation="bubble"></div>
-          </span>
-
-          <span class="facebook">
-            <div class="fb-share-button" data-href="{{site.url}}{{page.url}}"
-              data-layout="button_count" style="position: relative; top: -7px;"></div>
-          </span>
-        </div>
-        {% include facebookcomment.html %}
+        {% include social.html %}
       </div>
       <div class="col-md-3"></div>
     </div>
