--- a/_includes/social.html
+++ b/_includes/social.html
@@ -10,8 +10,7 @@
   </span>
 
   <span class="facebook">
-    <div class="fb-share-button" data-href="{{ site.url }}{{ page.url }}"
-      data-layout="button_count" style="position: relative; top: -7px;"></div>
+    <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button_count" style="position: relative; top: -7px;"></div>
   </span>
 </div>
 
