--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     {% include navbar.html %}
 
     <div class="container-fluid main-data">
-      <div class="col-md-3"></div>
+      <div class="col-md-3 text-center">
+        {% include twitter_embedded.html %}
+      </div>
       <div class="col-md-6 page-content">
         {{ content }}
       </div>
