--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,15 @@
     {% include navbar.html %}
 
     <div class="container-fluid main-data">
-      <div class="col-md-3 text-center">
-        {% include twitter_embedded.html %}
+      <div class="col-md-3">
+        
       </div>
       <div class="col-md-6 page-content">
         {{ content }}
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-md-3 text-center">
+        {% include twitter_embedded.html %}
+      </div>
     </div>
     </div>
     {% include footer.html %}
