--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
     {% include navbar.html %}
 
     <div class="container-fluid main-data">
-      <div class="col-md-3">
-        
+      <div class="col-md-3"> 
       </div>
       <div class="col-md-6 page-content">
         {{ content }}
       </div>
       <div class="col-md-3 text-center">
+        {% include livefeed.html %}
         {% include twitter_embedded.html %}
       </div>
     </div>
