--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
 
     <div class="container-fluid main-data">
       <div class="col-md-3 text-center">
+        {% include twitter_follow_button.html %}
         {% include livefeed.html %}
         {% include twitter_embedded.html %}
       </div>
