--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,8 @@
     {% include navbar.html %}
 
     <div class="container-fluid main-data">
-      <div class="col-md-3"> 
-      </div>
-      <div class="col-md-6 page-content">
+      <div class="col-md-1"></div>
+      <div class="col-md-8 page-content">
         {{ content }}
       </div>
       <div class="col-md-3 text-center">
