--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         {{ content }}
       </div>
       <div class="col-md-3 text-center">
+        {% include twitter_follow_button.html %}
         {% include livefeed.html %}
         {% include twitter_embedded.html %}
       </div>
