--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,7 @@
         {% include social.html %}
       </div>
       <div class="col-md-3 text-center">
+        {% include hit-counter.html %}
         {% include livefeed.html %}
         {% include feedjit.html %}
       </div>
