--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 
 <div class="share-social">
   <span class="twitter">
-    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="true">Tweet</a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </span>
 
