--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,8 @@
 
 <div class="share-social">
   <span class="twitter">
-    <script type="text/javascript" src="//newsharecounts.s3-us-west-2.amazonaws.com/nsc.js"></script><script type="text/javascript">window.newShareCountsAuto="smart";</script>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="true">Tweet</a>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </span>
 
   <span class="share-google">
