looks changed on about page

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,13 +1,13 @@
 .footer{
   background-color:#657786;
-  height: 100px;
+  height: 150px;
   width: auto;
   color: #ffffff;
   margin-top: 5%;
 }
 
 .footer
-h4 {
+h4:first-child {
   padding:5% 0 0 0;
 }
 
