--- a/_sass/_pagecontent.scss
+++ b/_sass/_pagecontent.scss
@@ -1,3 +1,4 @@
+
 .my-pic
 img {
   margin: 2% 0 0 0;
@@ -11,4 +12,13 @@ img {
 
 .description {
   font-size: 16px;
+}
+
+.social-media-links {
+  margin:50px 0 0 0;
+  a {
+    color:#1da1f2;
+    margin:0 0 0 5px;
+    text-decoration:none;
+  } 
 }
