--- a/_includes/social.html
+++ b/_includes/social.html
@@ -12,6 +12,11 @@
   <span class="facebook">
     <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button_count" style="position: relative; top: -7px;"></div>
   </span>
+
+  <span class="linkedin">
+    <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+    <script type="IN/Share" data-counter="right"></script>
+  </span>
 </div>
 
 
