--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,3 +1,8 @@
+<script
+    type="text/javascript"
+    async defer
+    src="//assets.pinterest.com/js/pinit.js"
+></script>
 
 <div class="share-social">
   <span class="twitter">
@@ -16,6 +21,12 @@
   <span class="linkedin">
     <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
     <script type="IN/Share" data-counter="right"></script>
+  </span>
+
+  <span class="pinterest">
+    <a href="https://www.pinterest.com/pin/create/button/" data-pin-count="beside">
+      <img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" />
+    </a>
   </span>
 </div>
 
