added redit button

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -28,6 +28,10 @@
       <img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" />
     </a>
   </span>
+
+  <span class="reddit">
+    <script type="text/javascript" src="//www.reddit.com/buttonlite.js?i=5"></script>
+  </span>
 </div>
 
 
