added favicon on head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <head>
   <meta charset="utf-8">
+  <link rel="icon" 
+      type="image/ico" 
+      href="http://rabingaire.me/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
   <meta property="fb:app_id" content="656159151208814" />
