added nepali quill link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,6 +13,7 @@
     <!--part that will collapse after reaching certain breakpoint-->
     <div class="collapse navbar-collapse" id="my-menu">
       <ul class="nav navbar-nav text-center navbar-right is-element">
+        <li><a href="/nepali">Nepali Quill</a></li>
         <li><a href=/about>About Me</a></li>
       </ul>
     </div>
