small change on design

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,5 +1,6 @@
 .post-content {
-  font-size: 18px;
+  font-size: 20px;
+  line-height: 34px;
 }
 
 .post-info {
@@ -9,4 +10,3 @@
 .post-time {
   color: #828282
 }
-
