--- a/_sass/_pagecontent.scss
+++ b/_sass/_pagecontent.scss
@@ -11,7 +11,8 @@ img {
 }
 
 .description {
-  font-size: 16px;
+  font-size: 20px;
+  line-height: 34px;
 }
 
 .social-media-links {
@@ -20,5 +21,5 @@ img {
     color:#1da1f2;
     margin:0 0 0 5px;
     text-decoration:none;
-  } 
+  }
 }
