adsense code added to head of the website

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,18 +12,11 @@
       href="http://rabingaire.me/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
-  <meta pro<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-4339831112237924",
-    enable_page_level_ads: true
-  });
-</script>perty="fb:app_id" content="656159151208814" />
+  <meta property="fb:app_id" content="656159151208814" />
   <title>{{ site.title }}</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <!--google share button -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-
 </head>
