people online added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
       </div>
       <div class="col-md-3 text-center">
         {% include twitter_follow_button.html %}
+        {% include livefeed.html %}
         {% include twitter_embedded.html %}
       </div>
     </div>
