--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
       href="http://rabingaire.me/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
+  <meta name="keywords" content="programming, code, blog, technology, software, programming languages, computers">
   <meta property="fb:app_id" content="656159151208814" />
   <title>{{ site.title }}</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
