--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,15 @@
   <meta charset="utf-8">
   <link rel="icon" 
       type="image/ico" 
-      href="https://rabingaire.me/favicon.ico">
+      href="http://rabingaire.me/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
   <meta name="keywords" content="programming, code, blog, technology, software, programming languages, computers">
   <meta property="fb:app_id" content="656159151208814" />
   <title>{{ site.title }}</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <!--google share button -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
