--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,23 +1,10 @@
-<nav class="navbar navbar-default is-navbar navbar-fixed-top">
-	<div class="container">
-		<div class="col-md-1 col-xs-12"></div>
-		<div class="col-md-10 col-xs-12">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my-menu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="{{ site.url }}" class="navbar-brand">Rabin's Quill</a>
-    </div>
-    <!--part that will collapse after reaching certain breakpoint-->
-    <div class="collapse navbar-collapse" id="my-menu">
-      <ul class="nav navbar-nav text-center navbar-right is-element">
-        <li><a href="/nepali">Nepali Quill</a></li>
-        <li><a href=/about>About Me</a></li>
-      </ul>
-    </div>
-	</div>
-	<div class="col-md-1 col-xs-12"></div>
+<div class="navbar-wrapper">
+  <div class="d-flex justify-content-center">
+    <h1>
+      <a href="{{ site.url }}" class="brand-name">Rabin's Quill</a>
+    </h1>
   </div>
-</nav>
+  <h6 class="d-flex justify-content-center work-title">
+    Well I am a webdeveloper.
+  </h6>
+</div>
