--- a/_includes/twitter_follow_button.html
+++ b/_includes/twitter_follow_button.html
@@ -1,5 +1,5 @@
-<br>
-<a class="twitter-follow-button"
-  href="https://twitter.com/rabingaire"
-  data-size="large">
-Follow @rabingaire</a>
+<div class="d-flex justify-content-center">
+  <a class="twitter-follow-button" href="https://twitter.com/rabingaire" data-size="large">
+    Follow @rabingaire
+  </a>
+</div>
