--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,24 +1,3 @@
-.footer{
-  background-color:#657786;
-  height: 150px;
-  width: auto;
-  color: #ffffff;
-  margin-top: 5%;
-}
-
-.footer
-h4:first-child {
-  padding:5% 0 0 0;
-}
-
-i
-{
-  color:#eb2e39;
-}
-
 .footer {
-  a,
-  a:hover {
-    color: #ffffff;
-  }
+    margin-top: 30px;
 }
