--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-@import "navbar","index","post","pagecontent","footer","footerbottom";
+@import "navbar","index","post","footer","footerbottom";
 
 html {
   text-align: justify;
