--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,16 @@
 <div class="footer">
-  <div class="col-md-3"></div>
-  <div class="col-md-6 text-center">
-    <h4>Created with <i class="fa fa-heart" aria-hidden="true"></i> in Jekyll</h4>
-    <h4>Hosted on Github</h4>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col col-md-6 text-center">
+        <h6>Created with <i class="fa fa-heart" aria-hidden="true"></i> in Jekyll</h6>
+      </div>
+    </div>
+    <div class="row justify-content-md-center"> 
+      <div class="col col-md-6 text-center">
+        <h6>Hosted on Github</h6>
+      </div>
+    </div>
   </div>
-  <div class="col-md-3"></div>
 </div>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
