--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,13 +1,3 @@
-.post-content {
-  font-size: 20px;
-  line-height: 34px;
-  font-family: 'Diaria Light Pro',sans-serif;
-}
-
-.post-info {
-  padding:0 0 5% 0;
-}
-
-.post-time {
-  color: #828282
+.blog-content {
+    text-align: justify;
 }
