--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <link rel="icon" 
       type="image/ico" 
-      href="http://rabingaire.me/favicon.ico">
+      href="http://rabingaire.com.np/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
   <meta name="keywords" content="programming, code, blog, technology, software, programming languages, computers">
