add twitter follow button

--- a/_includes/twitter_follow_button.html
+++ b/_includes/twitter_follow_button.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center">
-  <a class="twitter-follow-button" href="https://twitter.com/rabingaire" data-size="large">
+  <a class="twitter-follow-button" href="https://twitter.com/rabingaire" data-show-count="false">
     Follow @rabingaire
   </a>
 </div>
