added github follow button

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,5 +7,5 @@
   <h6 class="d-flex justify-content-center work-title">
     Well I am a webdeveloper.
   </h6>
-  {% include twitter_follow_button.html %}
+  {% include follow_button.html %}
 </div>
