--- a/_includes/follow_button.html
+++ b/_includes/follow_button.html
@@ -1,5 +1,8 @@
 <div class="d-flex justify-content-center">
+  <!-- twitter -->
   <a class="twitter-follow-button" href="https://twitter.com/rabingaire" data-show-count="false">
     Follow @rabingaire
   </a>
+  <!-- github -->
+  <a class="github-button" href="https://github.com/rabingaire" aria-label="Follow @rabingaire on GitHub">Follow @rabingaire</a>
 </div>
