--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,6 @@
 <head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-4339831112237924",
-      enable_page_level_ads: true
-    });
-  </script>
   <meta charset="utf-8">
-  <link rel="icon" 
-      type="image/ico" 
-      href="http://rabingaire.com.np/favicon.ico">
+  <link rel="icon" type="image/ico" href="http://rabingaire.com.np/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% seo %}
   <meta name="keywords" content="programming, code, blog, technology, software, programming languages, computers">
@@ -18,6 +9,4 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-  <!--google share button -->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
