--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,12 @@
     <div id="wrap">
       {% include navbar.html %}
       <div class="container">
-        <div class="row justify-content-md-center">
+        <div class="row">
+          <div class="col-md-2"></div>
           <div class="col-md-8">
             {{ content }}
           </div>
+          <div class="col-md-2"></div>
         </div>
       </div>
     </div>
