--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,15 @@
     <div id="wrap">
       {% include navbar.html %}
       <div class="container">
-        <div class="row justify-content-md-center">
-          <div class="col col-md-6">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6 blog-content">
             <h2 class="text-center">{{ page.title }}</h2>
             <h6 class="text-center">{{ page.date | date: "%B %-d, %Y" }}</h6>
-            <div class="blog-content">{{ content }}</div>
+            {{ content }}
             {% include social.html %}
           </div>
+          <div class="col-md-3"></div>
         </div>
       </div>
     </div>
