--- a/_includes/social.html
+++ b/_includes/social.html
@@ -14,7 +14,9 @@
   </span>
 
   <span class="facebook">
-    <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button_count" style="position: relative; top: -7px;"></div>
+    <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button_count" data-size="small" data-mobile-iframe="true" style="position: relative; top: -7px;">
+      <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}">Share</a>
+    </div>
   </span>
 
   <span class="linkedin">
