--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-wrapper {
-    margin: 50px 0px;
+  margin: 50px 0px;
 }
 
 .brand-name,
@@ -7,11 +7,11 @@
 .brand-name:visited,
 .brand-name:hover,
 .brand-name:active {
-    color: #000000;
-    text-decoration: none;
+  color: #000000;
+  text-decoration: none;
 }
 
 .work-title {
-    background-color: #000000;
-    color: #FFFFFF;
+  background-color: #000000;
+  color: #ffffff;
 }
