--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,12 @@
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col col-md-6 text-center">
-        <h6>Created with <i class="fa fa-heart" aria-hidden="true"></i> in Jekyll</h6>
+        <h6>
+          Created with <i class="fa fa-heart" aria-hidden="true"></i> in Jekyll
+        </h6>
       </div>
     </div>
-    <div class="row justify-content-md-center"> 
+    <div class="row justify-content-md-center">
       <div class="col col-md-6 text-center">
         <h6>Hosted on Github</h6>
       </div>
@@ -21,12 +23,26 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
 <!-- Google Analytics -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i["GoogleAnalyticsObject"] = r;
+    (i[r] =
+      i[r] ||
+      function () {
+        (i[r].q = i[r].q || []).push(arguments);
+      }),
+      (i[r].l = 1 * new Date());
+    (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m);
+  })(
+    window,
+    document,
+    "script",
+    "https://www.google-analytics.com/analytics.js",
+    "ga"
+  );
 
-  ga('create', 'UA-88403336-1', 'auto');
-  ga('send', 'pageview');
-
+  ga("create", "UA-88403336-1", "auto");
+  ga("send", "pageview");
 </script>
