--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-2"></div>
-          <div class="col-md-8">
-            {{ content }}
-          </div>
+          <div class="col-md-8">{{ content }}</div>
           <div class="col-md-2"></div>
         </div>
       </div>
